# Dell-Scraping

./: .env.example  .gitignore  .secrets.example.toml  README.md  alembic.ini  docker-compose.yml  pyproject.toml  settings.toml
alembic/: env.py
alembic/versions/: 0b0e44172d66_create_products_and_categories_tables.py  9489b8828ca7_initial_migration_create_tables.py
docs/: architecture.md  pace_system.md
examples/: contextual_logging_example.py  pace_example.py
src/dell/: main.py
src/dell/browser/: __init__.py  browser_manager.py  pace_manager.py  utils.py
src/dell/browser/profiles/: browser_profiles.py
src/dell/config/: database.py  rich_logging.py  settings.py
src/dell/models/: base.py  category.py  product.py
src/dell/schemas/: __init__.py
src/dell/utils/: __init__.py
src/dell/workflow/: __init__.py
src/dell/workflow/tasks/: __init__.py
